--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -8,17 +8,17 @@
   padding: 10px;
   margin: 10px;
   font-weight: bold;
-}
 
-.Button:first-of-type {
-  margin-left: 0;
-  padding-left: 0;
-}
+  &:first-of-type {
+    margin-left: 0;
+    padding-left: 0;
+  }
 
-.Success {
-  color: #5c9210;
-}
+  &.Success {
+    color: #5c9210;
+  }
 
-.Danger {
-  color: #944317;
+  &.Danger {
+    color: #944317;
+  }
 }
